# sd-card-reader

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  design.txt
.github/workflows/: tests.yml
components/button/: CMakeLists.txt  button.c
components/button/include/: button.h
components/ethernet/: CMakeLists.txt  ethernet.c
components/ethernet/include/: ethernet.h
components/oled_display/: CMakeLists.txt  oled_display.c  ssd1351_font.h
components/oled_display/include/: oled_display.h
components/sdcard/: CMakeLists.txt  sdcard.c
components/sdcard/include/: sdcard.h
components/thumbstick/: CMakeLists.txt  thumbstick.c
components/thumbstick/include/: thumbstick.h
docs/: design.txt
main/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  run_tests.c  test_button.c  test_sdcard.c  test_thumbstick.c
tests/stubs/: esp_err.h  esp_log.h  esp_vfs_fat.h  sdmmc_cmd.h  stubs.c
tests/stubs/driver/: gpio.h  sdspi_host.h  spi_common.h
tests/stubs/esp_adc/: adc_continuous.h
tests/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
tools/: receive_file.py
